Enabled tags for decks
